<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_offer"
        android:icon="@drawable/ic_offer"
        android:title="@string/menu_discount_offers"
        android:contentDescription="content description"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:title="More"
        android:contentDescription="content description"
        app:showAsAction="always" >

        <menu>

            <item
                android:id="@+id/action_settings"
                android:title="@string/menu_settings"
                android:contentDescription="content description"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_rate"
                android:title="@string/menu_rate_us"
                android:contentDescription="content description"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_share_app"
                android:title="@string/menu_share_app"
                android:contentDescription="content description"
                app:showAsAction="always" />

            <item
                android:id="@+id/action_about"
                android:title="@string/menu_about_us"
                android:contentDescription="content description"
                app:showAsAction="always" />

        </menu>

    </item>

</menu>