<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/option_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="in"
        android:gravity="center"
        android:padding="8dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/country_india"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/text_14sp"
        app:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintBottom_toTopOf="@+id/option_usa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/option_usa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginEnd="16dp"
        android:contentDescription="us"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/country_usa"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/text_14sp"
        app:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintBottom_toTopOf="@+id/option_korea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_in"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/option_korea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="kr"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/country_korea"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/text_14sp"
        app:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintBottom_toTopOf="@+id/option_china"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_usa"
        tools:ignore="HardcodedText" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/option_china"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="ch"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/country_china"
        android:textColor="@color/colorOnBackground"
        android:textSize="@dimen/text_14sp"
        app:fontFamily="@font/roboto_slab_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/option_korea"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>