<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.App.Toolbar.Flat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:title="@string/toolbar_title_top_headlines"
            app:titleTextColor="@color/colorToolbarTitle"
            tools:ignore="UnusedAttribute"
            tools:title="@string/toolbar_title_top_headlines">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_author"
                    android:layout_width="@dimen/size_author_small"
                    android:layout_height="@dimen/size_author_small"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/user_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textColor="@color/colorOnBackground"
                    android:textSize="@dimen/text_size_title"
                    app:fontFamily="@font/font_bold"
                    app:layout_constraintBottom_toTopOf="@+id/text_label_author"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/image_author"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="Hey OpenSource Android! :)" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_label_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_regular"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/label_author"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/text_author"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/text_author"
                    app:layout_constraintTop_toBottomOf="@+id/text_author" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_headline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H,16:9"
                app:layout_constraintEnd_toEndOf="@+id/text_title"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_date"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                app:strokeColor="@color/color_image_border"
                app:strokeWidth="@dimen/image_border_width"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_label_headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_headline"
                app:fontFamily="@font/slab_medium"
                android:textColor="@color/white"
                android:background="@color/color_headline_strip"
                app:layout_constraintEnd_toEndOf="@+id/text_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="marquee"
                android:maxLines="3"
                android:textColor="@color/colorOnBackground"
                android:textSize="@dimen/text_22sp"
                app:fontFamily="@font/font_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_label_headline"
                tools:text="Hey OpenSource Android! :)" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_slab_regular"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/text_14sp"
                app:layout_constraintEnd_toEndOf="@+id/text_title"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="31 december" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_slab_regular"
                android:textColor="@color/colorOnBackground"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_date"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/image_headline"
                app:layout_constraintVertical_bias="0.0"
                tools:text="I love Android JetPack" />


            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/slab_medium"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="message"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>